--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,32 @@
 .mainbox{
+  border-radius:0 100% 0 100%;
   box-shadow: none;
   transition: all 0.3s ease-in-out;
   display:flex;
   flex-direction: column;
   justify-content:right;
   align-items: center;
-  background:#708ce7;
-  border: solid 1px black;
+  background:#5874f19f;
+  border: solid 1px rgb(88, 88, 88);
   width:460px;
- height: 380px;
+  height: 320px;
 }
 .city{
   width: 100%;
   border-top: solid 1px black;
 }
 h1{
+  margin-top: 0;
   text-align: center;
   font-weight: bolder;
   font-family: Helvetica;
   font-variant:all-small-caps;
   font-size:32px;
   color:white;
-  text-shadow: 0.5px 0.5px rgb(53, 53, 53),-0.5px -0.5px rgb(53, 53, 53),-0.5px 0.5px rgb(53, 53, 53),0.5px -0.5px black, 3px 3px 3px rgb(80, 80, 80);
-}
+ }
 p{
   text-align: center;
   color:white;
-  text-shadow: 0.5px 0.5px rgb(53, 53, 53),-0.5px -0.5px rgb(53, 53, 53),-0.5px 0.5px rgb(53, 53, 53),0.5px -0.5px black, 3px 3px 3px rgb(80, 80, 80);
   font-weight: bold;
   font-variant: small-caps;
   font-family: Helvetica;
@@ -37,7 +37,6 @@ p{
   margin: 20px 0 20px 0;
   width: 100%;
   color:white;
-  text-shadow: 0.5px 0.5px rgb(53, 53, 53),-0.5px -0.5px rgb(53, 53, 53),-0.5px 0.5px rgb(53, 53, 53),0.5px -0.5px black, 3px 3px 3px rgb(80, 80, 80);
   text-align: center;
   font-family:Helvetica;
   font-size:22px;
@@ -50,18 +49,19 @@ p{
   margin: 2px 0 2px 0;
   font-weight: bold;
   color:white;
-  text-shadow: 0.5px 0.5px rgb(53, 53, 53),-0.5px -0.5px rgb(53, 53, 53),-0.5px 0.5px rgb(53, 53, 53),0.5px -0.5px black, 3px 3px 3px rgb(80, 80, 80);
-}
+ }
 .Contents{
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   color:white;
-  text-shadow: 0.5px 0.5px rgb(53, 53, 53),-0.5px -0.5px rgb(53, 53, 53),-0.5px 0.5px rgb(53, 53, 53),0.5px -0.5px black, 3px 3px 3px rgb(80, 80, 80);
-}
+  }
 .description{
   font-size: 22px;
   font-variant: all-small-caps;
   display: block;
+}
+.Contents,.temps,.cityname,p,h1{
+  text-shadow: 0.5px 0.5px rgb(53, 53, 53),-0.5px -0.5px rgb(53, 53, 53),-0.5px 0.5px rgb(53, 53, 53),0.5px -0.5px black, 3px 3px 7px rgb(80, 80, 80);
 }
