--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
+#root{
+  font-family:monospace;
+}
 .mainbox{
-  border-radius:0 100% 0 100%;
-  box-shadow: none;
+  border-radius:5px;
   transition: all 0.3s ease-in-out;
   display:flex;
   flex-direction: column;
   justify-content:right;
   align-items: center;
-  background:#5874f19f;
+  background:#63636971;
+  backdrop-filter: blur(0.8);
   border: solid 1px rgb(88, 88, 88);
   width:460px;
   height: 320px;
@@ -17,29 +20,22 @@
   border-top: solid 1px black;
 }
 h1{
+  font-size: 24px;
   text-align: center;
-  font-weight: bolder;
-  font-family: Helvetica;
-  font-variant:all-small-caps;
-  font-size:32px;
   color:white;
  }
 p,.datawait{
+  font-size: 18px;
   text-align: center;
   color:white;
-  font-weight: bold;
-  font-variant: small-caps;
-  font-family: Helvetica;
-  font-size:18px;
 }
 .cityname{
+  font-size: 24px;
   display: block;
   margin: 20px 0 20px 0;
   width: 100%;
   color:white;
   text-align: center;
-  font-family:Helvetica;
-  font-size:22px;
   font-variant:all-small-caps;
 }
 .temps{ 
@@ -48,7 +44,6 @@ p,.datawait{
   display: flex;
   flex-direction: column;
   margin: 2px 0 2px 0;
-  font-weight: bold;
   color:white;
  }
 .Contents{
@@ -59,8 +54,7 @@ p,.datawait{
   color:white;
   }
 .description{
-  font-size: 22px;
-  font-variant: all-small-caps;
+  font-size: 18px;
   width:120px;
 }
 .Contents,.temps,.cityname,p,h1,.datawait{
